vitrail-pg-macros/tests/ui/fail/insert_input_missing_required_field.stderr
error: missing required field `email` in insert input for model `user`
  --> tests/ui/fail/insert_input_missing_required_field.rs:5:1
   |
 5 | / schema! {
 6 | |     name insert_schema
 7 | |
 8 | |     model user {
...  |
13 | | }
   | |_^
14 |
15 |   #[derive(InsertInput)]
   |            ----------- in this derive macro expansion
   |
   = note: this error originates in the macro `__vitrail_scan_insert_input_field_insert_schema_user_email` which comes from the expansion of the derive macro `InsertInput` (in Nightly builds, run with -Z macro-backtrace for more info)
